--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,18 @@
 site_name: OSGISOMG
-theme: bootstrap
+theme: readthedocs
+
+pages:
+- index.md
+- Loading Data:
+  - loading_data.md
+  - 'Vector Data': loading_vector_data_1.md
+  - 'Adding Basemaps': loading_basemaps_and_other_external_data.md
+  - 'Loading From Databases': loading_from_DB.md
+  - 'Raster Data': loading_raster_data.md
+- Styling and Sharing:
+  - Styling.md
+  - Sharing_Your_Map.md
+- Managing, Manipulating, Creating Data:
+  - Selecting_and_Modifying Data.md
+- GIS Concepts Glossary:
+  - Concepts.md
