add about section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,3 +22,4 @@ pages:
   - Managing, Manipulating, Creating Data:
     - Selecting_and_Modifying Data.md
 - GIS Concepts Glossary: Concepts.md
+- About.md
